--- a/package.json
+++ b/package.json
@@ -7,12 +7,16 @@
     "@testing-library/react": "^11.2.3",
     "@testing-library/user-event": "^12.6.0",
     "axios": "^0.21.1",
+    "firebase": "^8.2.3",
     "react": "^17.0.1",
+    "react-bottom-scroll-listener": "^5.0.0",
     "react-dom": "^17.0.1",
     "react-redux": "^7.2.2",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.1",
     "redux": "^4.0.5",
+    "redux-logger": "^3.0.6",
+    "spotify-web-api-js": "^1.5.1",
     "web-vitals": "^0.2.4"
   },
   "scripts": {
